--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				[ 128, 0, 0 ], [ 170, 255, 195 ],
 				[ 128, 128, 0 ], [ 255, 216, 177 ],
 				[ 0, 0, 117 ], [ 128, 128, 128 ]
-			], largeNum = 10000000, frameRate = 100;
+			], largeNum = 10000000, frameRate = 100, aniLength = 20000;
 
 			let info = {
 				nodes: [],
@@ -130,10 +130,10 @@
 						"source": "V2",
 						"currentNode": "V2",
 						"destination": "V8",
-						"initBattery": 10,
+						"initBattery": 9,
 						"charging": 10,
 						"discharging": 1,
-						"max": 200,
+						"max": 30,
 						"speed": 20,
 						"isCharging": false,
 						"route": []
@@ -461,15 +461,14 @@
 					if (lastNode.type === 'travel') temp += inf.edges.find(edge => (edge.from === lastNode.from && edge.to === lastNode.to) || (edge.to === lastNode.from && edge.from === lastNode.to)).weight / cur.speed;
 					return acc > temp ? acc : temp;
 				}, 0);
-				const skew = 10 / lastTime;
-				let _time = 0;
+				let _time = 0, _init = Date.now();
 				animation = setInterval(() => {
-					draw(inf, Object.values(inf.EVs), _time++ / 10 / skew);
-					if (_time > frameRate * 10) {
+				draw(inf, Object.values(inf.EVs), _time++ * lastTime * 1000 / aniLength / frameRate);
+					if (_time * 1000 > aniLength * frameRate) {
 						clearInterval(animation);
-						console.log('Done');
+						console.log(Date.now() - _init);
 					}
-				}, 1000  * skew / frameRate);
+				}, 1 / frameRate);
 			}
 
 			if (debug) {
