--- a/heuristic.html
+++ b/heuristic.html
@@ -65,7 +65,7 @@
 			}
 		</style>
 		<script>
-			const sample = true;
+			let sample = true;
 
 			const $ = (id) => document.getElementById(id);
 
@@ -89,84 +89,86 @@
 				nodepos: {}
 			}, animation;
 
-			if (sample) {
-				info.nodes = Array.from({length: 8}).map((n, i) => `V${i + 1}`);
-				info.edges = [
-					{ from: 'V1', to: 'V2', weight: 8 },
-					{ from: 'V1', to: 'V4', weight: 4 },
-					{ from: 'V1', to: 'V5', weight: 10 },
-					{ from: 'V2', to: 'V3', weight: 4 },
-					{ from: 'V3', to: 'V4', weight: 7 },
-					{ from: 'V3', to: 'V7', weight: 6 },
-					{ from: 'V4', to: 'V5', weight: 8 },
-					{ from: 'V4', to: 'V7', weight: 6 },
-					{ from: 'V5', to: 'V6', weight: 5 },
-					{ from: 'V6', to: 'V7', weight: 1 },
-					{ from: 'V6', to: 'V8', weight: 2 },
-					{ from: 'V7', to: 'V8', weight: 5 }
-				]
-				info.EVs = {
-					"P1": {
-						"name": "P1",
-						"source": "V1",
-						"currentNode": "V1",
-						"destination": "V8",
-						"initBattery": 8,
-						"charging": 2,
-						"discharging": 4,
-						"max": 100,
-						"speed": 10,
-						"isCharging": true,
-						"route": []
-					},
-					"P2": {
-						"name": "P2",
-						"source": "V2",
-						"currentNode": "V2",
-						"destination": "V8",
-						"initBattery": 9,
-						"charging": 10,
-						"discharging": 1,
-						"max": 30,
-						"speed": 20,
-						"isCharging": false,
-						"route": []
-					},
-					"P3": {
-						"name": "P3",
-						"source": "V3",
-						"currentNode": "V3",
-						"destination": "V6",
-						"initBattery": 4,
-						"charging": 5,
-						"discharging": 20,
-						"max": 120,
-						"speed": 15,
-						"isCharging": false,
-						"route": []
-					},
-					"P4": {
-						"name": "P4",
-						"source": "V4",
-						"currentNode": "V4",
-						"destination": "V1",
-						"initBattery": 4,
-						"charging": 2,
-						"discharging": 3,
-						"max": 100,
-						"speed": 12,
-						"isCharging": false,
-						"route": []
-					}
-				}
-			}
-
 			let ctx;
 
 			window.onload = () => {
 				ctx = $('canvas').getContext('2d');
 				ctx.lineWidth = 1;
 				ctx.textAlign = 'left';
+				sample = confirm(`Would you like to use the supplied sample case?`);
+				if (sample) {
+					info.nodes = Array.from({length: 8}).map((n, i) => `V${i + 1}`);
+					info.edges = [
+						{ from: 'V1', to: 'V2', weight: 8 },
+						{ from: 'V1', to: 'V4', weight: 4 },
+						{ from: 'V1', to: 'V5', weight: 10 },
+						{ from: 'V2', to: 'V3', weight: 4 },
+						{ from: 'V3', to: 'V4', weight: 7 },
+						{ from: 'V3', to: 'V7', weight: 6 },
+						{ from: 'V4', to: 'V5', weight: 8 },
+						{ from: 'V4', to: 'V7', weight: 6 },
+						{ from: 'V5', to: 'V6', weight: 5 },
+						{ from: 'V6', to: 'V7', weight: 1 },
+						{ from: 'V6', to: 'V8', weight: 2 },
+						{ from: 'V7', to: 'V8', weight: 5 }
+					]
+					info.EVs = {
+						"P1": {
+							"name": "P1",
+							"source": "V1",
+							"currentNode": "V1",
+							"destination": "V8",
+							"initBattery": 8,
+							"charging": 2,
+							"discharging": 4,
+							"max": 100,
+							"speed": 10,
+							"isCharging": true,
+							"route": []
+						},
+						"P2": {
+							"name": "P2",
+							"source": "V2",
+							"currentNode": "V2",
+							"destination": "V8",
+							"initBattery": 9,
+							"charging": 10,
+							"discharging": 1,
+							"max": 30,
+							"speed": 20,
+							"isCharging": false,
+							"route": []
+						},
+						"P3": {
+							"name": "P3",
+							"source": "V3",
+							"currentNode": "V3",
+							"destination": "V6",
+							"initBattery": 4,
+							"charging": 5,
+							"discharging": 20,
+							"max": 120,
+							"speed": 15,
+							"isCharging": false,
+							"route": []
+						},
+						"P4": {
+							"name": "P4",
+							"source": "V4",
+							"currentNode": "V4",
+							"destination": "V1",
+							"initBattery": 4,
+							"charging": 2,
+							"discharging": 3,
+							"max": 100,
+							"speed": 12,
+							"isCharging": false,
+							"route": []
+						}
+					}
+					run();
+					animate(info);
+				}
 			}
 
 			function draw (info, vehs, time) {
@@ -347,7 +349,7 @@
 					info.EVs = {};
 					for (let i = 0; i < num; i++) info.EVs[`P${i + 1}`] = {};
 				}
-				$('evs').innerHTML = Object.keys(info.EVs).map(ev => `<fieldset><legend>${ev}</legend><div class="inline"><label for="${ev}source">Source</label>: <input type="text" list="${ev}sourcelist" id="${ev}source" class="inputcell" required /><datalist id="${ev}sourcelist">${info.nodes.map(node => `<option value="${node}" />`).join('')}</datalist></div><div class="inline"><label for="${ev}dest">Target</label>: <input type="text" list="${ev}destlist" id="${ev}dest" class="inputcell" required /><datalist id="${ev}destlist">${info.nodes.map(node => `<option value="${node}" />`).join('')}</datalist></div><br /><div class="inline"><label for="${ev}speed">Speed</label>: <input type="text" id="${ev}speed" class="nums" required /></div><br /><div class="inline"><label for="${ev}max">Battery Capacity</label>: <input type="text" id="${ev}max" class="nums" required /></div><div class="inline"><label for="${ev}init">Current Battery</label>: <input type="text" id="${ev}init" class="nums" required /></div><br /><div class="inline"><label for="${ev}charge">Charging Rate</label>: <input type="text" id="${ev}charge" class="nums" required /></div><div class="inline"><label for="${ev}discharge">Discharging Rate</label>: <input type="text" id="${ev}discharge" class="nums" required /></div><br /><div class="inline"><label for="${ev}init">Current Battery</label>: <input type="text" id="${ev}init" class="nums" required /></div></fieldset>`).join('<br />');
+				$('evs').innerHTML = Object.keys(info.EVs).map(ev => `<fieldset><legend>${ev}</legend><div class="inline"><label for="${ev}source">Source</label>: <input type="text" list="${ev}sourcelist" id="${ev}source" class="inputcell" required /><datalist id="${ev}sourcelist">${info.nodes.map(node => `<option value="${node}" />`).join('')}</datalist></div><div class="inline"><label for="${ev}dest">Target</label>: <input type="text" list="${ev}destlist" id="${ev}dest" class="inputcell" required /><datalist id="${ev}destlist">${info.nodes.map(node => `<option value="${node}" />`).join('')}</datalist></div><br /><div class="inline"><label for="${ev}speed">Speed</label>: <input type="text" id="${ev}speed" class="nums" required /></div><br /><div class="inline"><label for="${ev}max">Battery Capacity</label>: <input type="text" id="${ev}max" class="nums" required /></div><div class="inline"><label for="${ev}init">Current Battery</label>: <input type="text" id="${ev}init" class="nums" required /></div><br /><div class="inline"><label for="${ev}charge">Charging Rate</label>: <input type="text" id="${ev}charge" class="nums" required /></div><div class="inline"><label for="${ev}discharge">Discharging Rate</label>: <input type="text" id="${ev}discharge" class="nums" required /></div></fieldset>`).join('<br />');
 				$('vehtitle').hidden = false;
 				$('evbuttons').hidden = false;
 			}
@@ -458,11 +460,6 @@
 				draw(inf, Object.values(inf.EVs), _time++ * lastTime * 1000 / aniLength / frameRate);
 					if (_time * 1000 > aniLength * frameRate) clearInterval(animation);
 				}, 1 / frameRate);
-			}
-
-			if (sample) {
-				run();
-				animate(info);
 			}
 		</script>
 	</head>
